--- a/rsyslog.conf
+++ b/rsyslog.conf
@@ -20,7 +20,7 @@ input(type="imtcp" port="514")
 
 # Log anything (except mail) of level info or higher.
 # Don't log private authentication messages!
-*.info;mail.none;authpriv.none;cron.none                action(type="omfile" file="/var/log/messages")
+*.debug;mail.none;authpriv.none;cron.none                action(type="omfile" file="/var/log/messages")
 
 # The authpriv file has restricted access.
 authpriv.*                                              action(type="omfile" file="/var/log/secure")
