OLMIS-735 Connect Postgres logs to rsyslog container

--- a/rsyslog.conf
+++ b/rsyslog.conf
@@ -20,7 +20,10 @@ input(type="imtcp" port="514")
 
 # Log anything (except mail) of level info or higher.
 # Don't log private authentication messages!
-*.debug;mail.none;authpriv.none;cron.none                action(type="omfile" file="/var/log/messages")
+*.debug;mail.none;authpriv.none;cron.none;local0.none   action(type="omfile" file="/var/log/messages")
+
+# The postgres logs go to seperate file.
+local0.*                                                action(type="omfile" file="/var/log/postgres")    
 
 # The authpriv file has restricted access.
 authpriv.*                                              action(type="omfile" file="/var/log/secure")
